# coloring

./: .gitignore  CLAUDE.md  README.md  netlify.toml
.cursor/agents/: worker.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/public/: manifest.webmanifest  sw.js
app/public/images/: catalog.json
app/src/: catalog.ts  celebrate.ts  editor.ts  favorites.ts  gallery.ts  i18n.ts  installPrompt.ts  main.ts  offlineCache.ts  replay.ts  store.ts  style.css  theme.ts
app/src/engine/: floodfill.test.ts  floodfill.ts  history.ts  opRenderer.ts  ops.test.ts  ops.ts  raster.ts  regionTestHelpers.ts  tools.ts
app/src/types/: gifenc.d.ts
generator/: .gitignore  README.md  pyproject.toml
generator/prompts/: starter.txt
