[project]
name = "gen"
version = "0.1.0"
description = "Generates SVG coloring pages and adds them to the Coloriki app catalog."
readme = "README.md"
authors = [
    { name = "Eugene Melnikov", email = "eugene@enneo.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "scour>=0.38.2",
    "vtracer>=0.6.15",
]

[project.scripts]
gen = "gen.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
